# serv

./: Cargo.toml  README.md
assets/css/: all.min.css
src/: cli.rs  config.rs  fairings.rs  fs_utils.rs  main.rs  send_file.rs
templates/: files.html  files.html.hbs
