[package]
name = "cargo-serv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-rocket"] }
askama_rocket = "0.12.0"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
env_logger = "0.11.3"
human_bytes = "0.4.3"
log = "0.4.21"
rocket = "0.5.0"
rocket-include-static-resources = "0.10.5"


